--- a/app/locale/base.pot
+++ b/app/locale/base.pot
@@ -69,7 +69,8 @@ msgstr ""
 
 #: app/templates/resume/index.html:41
 msgid ""
-"Gli unit test sono stati realizzati con <strong>pytest</strong>, mentre "
+"Gli unit test sono stati realizzati con <strong>pytest</strong> "
+"e <strong>Selenium Webdriver</strong> per simulare le azioni utente sul browser, mentre "
 "la componente di versionamento del codice prevede l'utilizzo di "
 "<strong>Git</strong> e un repository remoto su <strong>Github</strong>, "
 "integrato con <strong>Travis CI</strong> per abilitare i test automatici "
