--- a/app/locale/en/LC_MESSAGES/messages.po
+++ b/app/locale/en/LC_MESSAGES/messages.po
@@ -68,12 +68,12 @@ msgid ""
 " essere servito da un Application Server <strong>Gunicorn</strong> "
 "protetto da <strong>Nginx</strong> come webserver in modalità "
 "<strong>reverse proxy</strong>. Il grid-system è "
-"<strong>Bootstrap</strong>.<br />"
+"<strong>Bootstrap</strong>. Il sistema appartiene a una CDN di <strong>Cloudflare</strong>.<br />"
 msgstr ""
 "The MVC Web Framework used is <strong>Flask</strong>, configured to be "
 "served by a <strong>Gunicorn</strong> Application Server, behind a "
 "webserver <strong>Nginx</strong> in a reverse-proxy mode."
-"The grid-system is <strong>Bootstrap</strong>.<br />"
+"The grid-system is <strong>Bootstrap</strong>. The system is deployed in a Cloudflare CDN.<br />"
 
 #: app/templates/resume/index.html:40
 msgid ""
@@ -87,14 +87,15 @@ msgstr ""
 
 #: app/templates/resume/index.html:41
 msgid ""
-"Gli unit test sono stati realizzati con <strong>pytest</strong>, mentre "
+"Gli unit test sono stati realizzati con <strong>pytest</strong> "
+"e <strong>Selenium Webdriver</strong> per simulare le azioni utente sul browser, mentre "
 "la componente di versionamento del codice prevede l'utilizzo di "
 "<strong>Git</strong> e un repository remoto su <strong>Github</strong>, "
 "integrato con <strong>Travis CI</strong> per abilitare i test automatici "
-"in modalità <strong>Continuous Integration</strong> e la release automatica"
-" del codice su <strong>Heroku</strong> in modalità <strong>Continuous Delivery</strong>.<br />"
+"in modalità <strong>Continuous Integration</strong>.<br />"
 msgstr ""
-"Unit tests are made with <strong>pytest</strong>, with <strong>Git</strong> as "
+"Unit tests are made with <strong>pytest</strong> and <strong>Selenium Webdriver</strong>, "
+"useful to simulate user actions with the browser. Also, I chose <strong>Git</strong> as "
 "Version Control System and a remote <strong>Github</strong> repository, "
 "deeply integrated with <strong>Travis CI</strong>, in order to enable automatic tests "
 "in <strong>Continuous Integration</strong> mode and automatic releases to <strong>Heroku</strong> "
