--- a/app/locale/en/LC_MESSAGES/messages.po
+++ b/app/locale/en/LC_MESSAGES/messages.po
@@ -73,7 +73,7 @@ msgstr ""
 "The MVC Web Framework used is <strong>Flask</strong>, configured to be "
 "served by a <strong>Gunicorn</strong> Application Server, behind a "
 "webserver <strong>Nginx</strong> in a reverse-proxy mode."
-"The grid-system is <strong>Bootstrap</strong>. The system is deployed in a Cloudflare CDN.<br />"
+"The grid-system is <strong>Bootstrap</strong>. The system is deployed in a <strong>Cloudflare</strong> CDN.<br />"
 
 #: app/templates/resume/index.html:40
 msgid ""
@@ -92,12 +92,13 @@ msgid ""
 "la componente di versionamento del codice prevede l'utilizzo di "
 "<strong>Git</strong> e un repository remoto su <strong>Github</strong>, "
 "integrato con <strong>Travis CI</strong> per abilitare i test automatici "
-"in modalità <strong>Continuous Integration</strong>.<br />"
+"di <strong>Continuous Integration</strong> e la release automatica "
+"su <strong>Heroku</strong> in <strong>Continuous Delivery</strong>.<br />"
 msgstr ""
 "Unit tests are made with <strong>pytest</strong> and <strong>Selenium Webdriver</strong>, "
 "useful to simulate user actions with the browser. Also, I chose <strong>Git</strong> as "
-"Version Control System and a remote <strong>Github</strong> repository, "
-"deeply integrated with <strong>Travis CI</strong>, in order to enable automatic tests "
+"Version Control System and built a remote <strong>Github</strong> repository, "
+"deeply integrated with <strong>Travis CI</strong>, in order to enable tests "
 "in <strong>Continuous Integration</strong> mode and automatic releases to <strong>Heroku</strong> "
 "in <strong>Continuous Delivery</strong> mode.<br />"
 
